--- a/index.html
+++ b/index.html
@@ -1,56 +1,30 @@
-<!DOCTYPE html>
-<html lang="ja">
+<!doctype html>
+
+<html>
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>0-do</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" charset="utf-8">
+    <link rel="stylesheet" href="todo.css">
 
-    <!-- Bootstrap 4のCSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-
-    <!-- 日本語フォント用の設定 -->
-    <link href="https://fonts.googleapis.com/earlyaccess/notosansjapanese.css" rel="stylesheet" />
-    <style>
-      body {
-        font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", "Noto Sans Japanese", "ヒラギノ角ゴ ProN W3", Hiragino Kaku Gothic ProN, Arial, Meiryo, sans-serif;
-      }
-    </style>
-
-    <!-- タイトル -->
-    <title>テクノロジー（藤原）サンプル</title>
   </head>
 
   <body>
-    <div class="container">  <!-- Bootstrap 4用のタグ -->
 
-      <!-- 自分用のHTMLをここに書く -->
+    <todo></todo>
 
-      <h1>Hello, world!</h1>
+    <script src="todo.tag" type="riot/tag"></script>
+    <script src="https://rawgit.com/riot/riot/master/riot%2Bcompiler.min.js"></script>
 
-      <p>これはHTMLのサンプルです。</p>
+    <script>
+    riot.mount('todo', {
+      title: 'ADD YOUR TASK HERE',
+      items: [
+        { title: 'Test Subject(what is done)', done: true },
+        { title: 'テストサブジェクト2'  },
+      ]
+    })
+    </script>
 
-      <h2>入力</h2>
-      <form name="mainForm">
-        <div class="form-group">
-          <label for="input1">入力1</label>
-          <input id="input1" class="form-control" type="text" />
-        </div>
-
-        <div class="form-group">
-          <label for="input2">入力2</label>
-          <input id="input2" class="form-control" type="text" />
-        </div>
-      </form>
-
-      <h2>出力</h2>
-      <p>ここに出力したい</p>
-
-      <!-- 自分用のHTMLはここまで -->
-
-    </div>  <!-- Bootstrap 4用のタグ -->
-
-    <!-- 外部のJavaScriptライブラリ -->
-    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
   </body>
+
 </html>
